--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -17,6 +17,9 @@ One does not become a tightest crew, you are either born into it, or become one 
 <h2> <strong> Features of crew members </strong> </h2> 
 <p> Senior tightmasters develop the ability to time travel, make any voice and impersonate others, be invisible and super stealthy, to heal wounds by yelling "Pain is just mental, get up and fight" at the wounded or to yell "We need you buddy, get up!", and last but not least to be super strong and able to wear full body armor and move around with ease. They wear suits, ties, and typically matching masks. The most common Tightmaster wears aviator sunglasses and a suit. </p>
 <img src= "photos/tight.jpg"/>
+<p> Tightmasters are amazing drivers, serving as escape drivers and real human beans. After hours on end of radiation exposure from radiating tightness, and sometimes carrying nuclear bombs around casually with their inhuman strength, tightmasters almost have superpowers. Such as mentioned before, with yelling at people to heal wounds. They are amazing drivers, and can drive even when their eyes are completely covered. They can drift and are masters of driving 2fast2qwik.
+They are masters of finesse, stealing from the rich and giving to themselves. They are so finesse that if they are shot at they can finesse the bullet right out of the air. They stole Ghaddafi's car.<p>
+
 </body>
 
 </html>
