--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -19,7 +19,8 @@ One does not become a tightest crew, you are either born into it, or become one 
 <img src= "photos/tight.jpg"/>
 <p> Tightmasters are amazing drivers, serving as escape drivers and real human beans. After hours on end of radiation exposure from radiating tightness, and sometimes carrying nuclear bombs around casually with their inhuman strength, tightmasters almost have superpowers. Such as mentioned before, with yelling at people to heal wounds. They are amazing drivers, and can drive even when their eyes are completely covered. They can drift and are masters of driving 2fast2qwik.
 They are masters of finesse, stealing from the rich and giving to themselves. They are so finesse that if they are shot at they can finesse the bullet right out of the air. They stole Ghaddafi's car.<p>
-
+<p> By William Luzzatto on 9/22/2015, tight for life </p>
+<a href= "http://steamcommunity.com/id/DoctorSwifto"> Doctor Swifto </a>
 </body>
 
 </html>
