--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -6,19 +6,53 @@
 <body>
 <h2> Who are we? </h2>
 <p> We are the tightest crew ever. Nobody has anything on us. We are the tightest in the world. Nobody is tighter than the tightest crew.
-We are the original tightest crew. Been tight since my first night, of my life. You could never even dream of being this tight. The amount of tightness may seem impossible to the regular human brain. Our tightness is a paradox, wrapped in a riddle tightly, and enshrouded tightly in an enigma.
-Yung Lean is a real human bean. We are the only humans who have reached this level of tightness. We were born to be tight, trained from infancy by tibetan monks the art of the tightest crew. Taken away from our parents at birth and taught the way of the tight.
+We are the original tightest crew. Been tight since my first night, of my life. You could never even dream of being this tight. The amount of 
+tightness may seem impossible to the regular human brain. Our tightness is a paradox, wrapped in a riddle tightly, and enshrouded tightly in an enigma.
+Yung Lean is a real human bean. We are the only humans who have reached this level of tightness. We were born to be tight, trained from infancy by 
+tibetan monks the art of the tightest crew. Taken away from our parents at birth and taught the way of the tight.
 One does not become a tightest crew, you are either born into it, or become one of the crew by proving yourself to the elder Tightmasters.
+
 </p>
-<h2><strong> The Code of the Tightest Crew </strong></h2> <p><strong>"Tighthood is Knighthood. Tight for life. Never forgetti. Tightness brings brightness. Tight for life. Never forgetti. Knees weak arms are heavy. On the surface he looks nervous but he's calm and ready. There's vomit on his sweater already. Mom's spaghetti. </strong></p>
+<h2><strong> The Code of the Tightest Crew </strong></h2> <p><strong>"Tighthood is Knighthood. Tight for life. Never forgetti. Tightness brings 
+brightness. Tight for life. Never forgetti. Knees weak arms are heavy. On the surface he looks nervous but he's calm and ready. There's vomit on his 
+sweater already. Mom's spaghetti. </strong></p>
 <h2> <strong> Becoming one of the Tightest Crew </strong></h2> 
-<p>One does not become a tightest crew easily, you must prove your courage, bravery and prowess in battle to one of the senior "Tightmasters". We were born to be tight, trained from infancy by tibetan monks the art of the tightest crew. Taken away from our parents at birth and taught the way of the tight.
-One does not become a tightest crew, you are either born into it, or become one of the crew by proving yourself to the elder Tightmasters. You are either born intp the tight by a Tight father and mother who love eachother very much and make a child. Or you prove your worth to the realm of the tight.</P>
+<p>One does not become a tightest crew easily, you must prove your courage, bravery and prowess in battle to one of the senior "Tightmasters".
+ We were born to be tight, trained from infancy by tibetan monks the art of the tightest crew. Taken away from our parents at birth and taught the
+ way 
+ of the tight.
+One does not become a tightest crew, you are either born into it, or become one of the crew by proving yourself to the elder Tightmasters. You are 
+either born into the tight by a Tight father and tight mother who love each other and make a tight baby a tight bed in . Or you prove your worth 
+to the
+order of the tight.</P>
 <h2> <strong> Features of crew members </strong> </h2> 
-<p> Senior tightmasters develop the ability to time travel, make any voice and impersonate others, be invisible and super stealthy, to heal wounds by yelling "Pain is just mental, get up and fight" at the wounded or to yell "We need you buddy, get up!", and last but not least to be super strong and able to wear full body armor and move around with ease. They wear suits, ties, and typically matching masks. The most common Tightmaster wears aviator sunglasses and a suit. </p>
+<p> Senior tightmasters develop the ability to time travel, make any voice and impersonate others, be invisible and super 
+stealthy, to heal wounds by yelling "Pain is just mental, get up and fight" at the wounded or to yell "We need you buddy, get up!", and last but not 
+least to be super strong and able to wear full body armor and move around with ease. 
+They wear suits, ties, and typically matching masks. The most common Tightmaster wears aviator sunglasses and a suit. 
+The mask or pair of sunglasses serves as the source of tightness for tightmasters. They are tight without said attire but the mask and clothing 
+amplify the tightness by 10 times. Making their inhuman levels of tightness even more deadly. When the crew of 4 men are all wearing matching masks, 
+they will recieve the blessing of Almir Listo ( the god worshipped by the tightmen). A blessing from Almir gives immense power to the tightmen. 
+They will be far luckier and have a much higher chance of sucess. If they are all wearing matching shades, they are guaranteed to be sucessful when 
+they are together. If they are all wearing matching avaitor shades, they recieve a tightness level which is the total tightness of the group
+ multiplied by 10000 for each crew member. Each crew member would have the total tight level multiplied by 1000 for themselves while wearing m
+ atching avaitors. Doctor Swifto may be the most senior tightmaster, but Almir Listo is 10000000000 times tighter than him. That makes Almir 
+ 10000000000  times tighter than the tightest person from the tightest crew in the universe.
+</p>
 <img src= "photos/tight.jpg"/>
-<p> Tightmasters are amazing drivers, serving as escape drivers and real human beans. After hours on end of radiation exposure from radiating tightness, and sometimes carrying nuclear bombs around casually with their inhuman strength, tightmasters almost have superpowers. Such as mentioned before, with yelling at people to heal wounds. They are amazing drivers, and can drive even when their eyes are completely covered. They can drift and are masters of driving 2fast2qwik.
-They are masters of finesse, stealing from the rich and giving to themselves. They are so finesse that if they are shot at they can finesse the bullet right out of the air. They stole Ghaddafi's car.<p>
+<p> Tightmasters are amazing drivers, serving as escape drivers and real human beans. After hours on end of radiation exposure from radiating 
+tightness, and sometimes carrying nuclear bombs around casually with their inhuman strength, tightmasters almost have superpowers. Such as mentioned 
+before, with yelling at people to heal wounds. They are amazing drivers, and can drive even when their eyes are completely covered. They can 
+drift and are masters of driving 2fast2qwik. The tight usually travel in groups of 4, as that is all they need.
+They are both masters of stealth and secrecy, and masters of fighting 
+ "loud". They wield any weapon with ease. And they can hit a target 15 lightyears away. 
+<p>They are masters of finesse, stealing from the rich and giving to themselves. They are so finesse that if they are shot at they can finesse the 
+bullet right out of the air. They stole Ghaddafi's car, which serves as their main vehicle.<p>
+<h2> To join the tight masters </h2>
+<p> To become one of the tight, one must develop tightness that is inhuman, so tight in fact that regular humans would die from the tight.
+ You must train among the tight, day and night until you reach that level of tightness. It could take months of years of training in the tight 
+ monastery in Havre De Grace, Maryland. The school of the tight is located there. The tight monastery was founded by the tightest man alive Doctor
+ Swifto. 
 <p> By William Luzzatto on 9/22/2015, tight for life </p>
 <a href= "http://steamcommunity.com/id/DoctorSwifto"> Doctor Swifto </a>
 </body>
