--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -45,14 +45,14 @@ tightness, and sometimes carrying nuclear bombs around casually with their inhum
 before, with yelling at people to heal wounds. They are amazing drivers, and can drive even when their eyes are completely covered. They can 
 drift and are masters of driving 2fast2qwik. The tight usually travel in groups of 4, as that is all they need.
 They are both masters of stealth and secrecy, and masters of fighting 
- "loud". They wield any weapon with ease. And they can hit a target 15 lightyears away. 
+ "loud". They wield any weapon with ease. And they can hit a target 15 lightyears away. </p>
 <p>They are masters of finesse, stealing from the rich and giving to themselves. They are so finesse that if they are shot at they can finesse the 
 bullet right out of the air. They stole Ghaddafi's car, which serves as their main vehicle.<p>
 <h2> To join the tight masters </h2>
 <p> To become one of the tight, one must develop tightness that is inhuman, so tight in fact that regular humans would die from the tight.
  You must train among the tight, day and night until you reach that level of tightness. It could take months of years of training in the tight 
  monastery in Havre De Grace, Maryland. The school of the tight is located there. The tight monastery was founded by the tightest man alive Doctor
- Swifto. 
+ Swifto. But Almir is the tightest entity ever.</p>
 <p> By William Luzzatto on 9/22/2015, tight for life </p>
 <a href= "http://steamcommunity.com/id/DoctorSwifto"> Doctor Swifto </a>
 </body>
