--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -54,6 +54,10 @@ bullet right out of the air. They stole Ghaddafi's car, which serves as their ma
  monastery in Havre De Grace, Maryland. The school of the tight is located there. The tight monastery was founded by the tightest man alive Doctor
  Swifto. But Almir is the tightest entity ever.</p>
 <p> By William Luzzatto on 9/22/2015, tight for life </p>
+<h2> People in order of Tightness </h2>
+<ul> <li> Almir Listo </li>
+<li>Doctor Swifto </li>
+<li>BustANutOnTheCoach </li> </ul>
 <a href= "http://steamcommunity.com/id/DoctorSwifto"> Doctor Swifto </a>
 </body>
 
