--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -8,7 +8,8 @@
 <p> We are the tightest crew ever. Nobody has anything on us. We are the tightest in the world. Nobody is tighter than the tightest crew.
 We are the original tightest crew. Been tight since my first night, of my life. You could never even dream of being this tight. The amount of 
 tightness may seem impossible to the regular human brain. Our tightness is a paradox, wrapped in a riddle tightly, and enshrouded tightly in an enigma.
-Yung Lean is a real human bean. We are the only humans who have reached this level of tightness. We were born to be tight, trained from infancy by 
+Yung Lean is a real human bean, so is Ye Olde, but Ryan Gosling is the original human bean. Ryan Gosling is a real human bean and a real hero.
+ We are the only humans who have reached this level of tightness. We were born to be tight, trained from infancy by 
 tibetan monks the art of the tightest crew. Taken away from our parents at birth and taught the way of the tight.
 One does not become a tightest crew, you are either born into it, or become one of the crew by proving yourself to the elder Tightmasters.
 
