--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<h1>The Tightest Crew <title> Tightest Crew Site </title></h1>
+<h1> <u> The Tightest Crew </u><title> Tightest Crew Site </title></h1>
 </head>
 <body>
-<h2> Who are we? </h2>
+<h2><u> Who are we? </u></h2>
 <p> We are the tightest crew ever. Nobody has anything on us. We are the tightest in the world. Nobody is tighter than the tightest crew.
 We are the original tightest crew. Been tight since my first night, of my life. You could never even dream of being this tight. The amount of 
 tightness may seem impossible to the regular human brain. Our tightness is a paradox, wrapped in a riddle tightly, and enshrouded tightly in an enigma.
@@ -14,19 +14,18 @@ tibetan monks the art of the tightest crew. Taken away from our parents at birth
 One does not become a tightest crew, you are either born into it, or become one of the crew by proving yourself to the elder Tightmasters.
 
 </p>
-<h2><strong> The Code of the Tightest Crew </strong></h2> <p><strong>"Tighthood is Knighthood. Tight for life. Never forgetti. Tightness brings 
+<h2><strong><u> The Code of the Tightest Crew </u></strong></h2> <p><strong>"Tighthood is Knighthood. Tight for life. Never forgetti. Tightness brings 
 brightness. Tight for life. Never forgetti. Knees weak arms are heavy. On the surface he looks nervous but he's calm and ready. There's vomit on his 
 sweater already. Mom's spaghetti. </strong></p>
-<h2> <strong> Becoming one of the Tightest Crew </strong></h2> 
+<h2> <strong><u> Becoming one of the Tightest Crew </u></strong></h2> 
 <p>One does not become a tightest crew easily, you must prove your courage, bravery and prowess in battle to one of the senior "Tightmasters".
  We were born to be tight, trained from infancy by tibetan monks the art of the tightest crew. Taken away from our parents at birth and taught the
- way 
- of the tight.
+ way of the tight.
 One does not become a tightest crew, you are either born into it, or become one of the crew by proving yourself to the elder Tightmasters. You are 
 either born into the tight by a Tight father and tight mother who love each other and make a tight baby a tight bed in . Or you prove your worth 
 to the
 order of the tight.</P>
-<h2> <strong> Features of crew members </strong> </h2> 
+<h2> <strong><u> Features of crew members</u> </strong> </h2> 
 <p> Senior tightmasters develop the ability to time travel, make any voice and impersonate others, be invisible and super 
 stealthy, to heal wounds by yelling "Pain is just mental, get up and fight" at the wounded or to yell "We need you buddy, get up!", and last but not 
 least to be super strong and able to wear full body armor and move around with ease. 
@@ -49,17 +48,22 @@ They are both masters of stealth and secrecy, and masters of fighting
  "loud". They wield any weapon with ease. And they can hit a target 15 lightyears away. </p>
 <p>They are masters of finesse, stealing from the rich and giving to themselves. They are so finesse that if they are shot at they can finesse the 
 bullet right out of the air. They stole Ghaddafi's car, which serves as their main vehicle.<p>
-<h2> To join the tight masters </h2>
+<h2> <u> To join the tight masters </u></h2>
 <p> To become one of the tight, one must develop tightness that is inhuman, so tight in fact that regular humans would die from the tight.
  You must train among the tight, day and night until you reach that level of tightness. It could take months of years of training in the tight 
  monastery in Havre De Grace, Maryland. The school of the tight is located there. The tight monastery was founded by the tightest man alive Doctor
  Swifto. But Almir is the tightest entity ever.</p>
 <p> By William Luzzatto on 9/22/2015, tight for life </p>
-<h2> People in order of Tightness </h2>
+<h2> <u> People in order of Tightness </u></h2>
 <ul> <li> Almir Listo </li>
 <li>Doctor Swifto </li>
 <li>BustANutOnTheCoach </li> </ul>
 <a href= "http://steamcommunity.com/id/DoctorSwifto"> Doctor Swifto </a>
-</body>
+<p>
 
+
+
+<img src= "photos/koala screwed up.jpg"/>
+<img src= "photos/sea.jpg"/></p>
+<body>
 </html>
