--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -4,6 +4,7 @@
 <h1> <u> The Tightest Crew </u><title> Tightest Crew Site </title></h1>
 </head>
 <body>
+	<link href = "css/style.css" type = "text/css" rel = "stylesheet" />
 <h2><u> Who are we? </u></h2>
 <p> We are the tightest crew ever. Nobody has anything on us. We are the tightest in the world. Nobody is tighter than the tightest crew.
 We are the original tightest crew. Been tight since my first night, of my life. You could never even dream of being this tight. The amount of 
