--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -64,7 +64,7 @@ bullet right out of the air. They stole Ghaddafi's car, which serves as their ma
 
 
 
-<img src= "photos/koala screwed up.jpg"/>
+<img src= "photos/koala.jpg"/>
 <img src= "photos/sea.jpg"/></p>
 <body>
 </html>
