--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -40,6 +40,7 @@ they are together. If they are all wearing matching avaitor shades, they recieve
  atching avaitors. Doctor Swifto may be the most senior tightmaster, but Almir Listo is 10000000000 times tighter than him. That makes Almir 
  10000000000  times tighter than the tightest person from the tightest crew in the universe.
 </p>
+
 <img src= "photos/tight.jpg"/>
 <p> Tightmasters are amazing drivers, serving as escape drivers and real human beans. After hours on end of radiation exposure from radiating 
 tightness, and sometimes carrying nuclear bombs around casually with their inhuman strength, tightmasters almost have superpowers. Such as mentioned 
@@ -60,11 +61,14 @@ bullet right out of the air. They stole Ghaddafi's car, which serves as their ma
 <li>Doctor Swifto </li>
 <li>BustANutOnTheCoach </li> </ul>
 <a href= "http://steamcommunity.com/id/DoctorSwifto"> Doctor Swifto </a>
+ <h2> <u> The Gospel of Tight </u> </h2>
+ 
+ <a href= "The story of yung lean.html"> Yung Lean and the story of Almir's DlC </a>
 <p>
 
 
 
 <img src= "photos/koala.jpg"/>
 <img src= "photos/sea.jpg"/></p>
-<body>
+</body>
 </html>
