--- a/yung lean.html
+++ b/yung lean.html
@@ -16,6 +16,9 @@ tried to be most Yung-Lean-like. Striving to reach the level at which Yung Lean'
  <h2> <u> The Fate of Yung Lean </u> </h2>
  <p> Yung Lean's tightness ultimately brought his own demise. Yung Lean was so tight that he had his own gravitational pull, and it caused a
  black hole. So much tightness in one spot caused a black hole. And it killed him and 20 other followers. Almir patched the hole with DLC, and if Almir did not stop making DlC, the black hole would open again.
- Moral of the story is that with great power comes great responsibility.
+ Moral of the story is that with great power comes great responsibility. And this is why Almir is always making DLC. </p>
+ <img src= "photos/tight.jpg"/>
+ </body>
+ </html>
  
 
