--- a/yung lean.html
+++ b/yung lean.html
@@ -11,13 +11,16 @@
 <p> Because of Yung Lean's tightness, he developed a great following. And a religion was formed. Merged with the Church of Almir, Tightism was Created.
 Yung Lean had followers kissing the ground on which he stood upon. His followers would do anything for him. For years, the tightest crew have 
 tried to be most Yung-Lean-like. Striving to reach the level at which Yung Lean's tightness level was. Yung Lean would hang out with the un-tight, and teach them the way of the tight. </p>
+ <img src= "photos/tight.jpg"/>
 <p> Despite having such a large following he still felt lonely. As he said in his platinum record "Yoshi City", "I'm a lonely clown with my
  windows down, I'm a lonely lonely". </P>
  <h2> <u> The Fate of Yung Lean </u> </h2>
  <p> Yung Lean's tightness ultimately brought his own demise. Yung Lean was so tight that he had his own gravitational pull, and it caused a
  black hole. So much tightness in one spot caused a black hole. And it killed him and 20 other followers. Almir patched the hole with DLC, and if Almir did not stop making DlC, the black hole would open again.
  Moral of the story is that with great power comes great responsibility. And this is why Almir is always making DLC. </p>
- <img src= "photos/tight.jpg"/>
+  <a href= "Tightest crew site.html"> Home </a> 
+<ol><a href= "Almir.html"> Almir and the Creation of the Universe </a></ol>
+
  </body>
  </html>
  
