--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -63,7 +63,8 @@ bullet right out of the air. They stole Ghaddafi's car, which serves as their ma
 <a href= "http://steamcommunity.com/id/DoctorSwifto"> Doctor Swifto </a>
  <h2> <u> The Gospel of Tight </u> </h2>
  
- <a href= "The story of yung lean.html"> Yung Lean and the story of Almir's DlC </a>
+ <ol> <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
+ <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> </ol>
 <p>
 
 
