living on a prayer

--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -58,13 +58,16 @@ bullet right out of the air. They stole Ghaddafi's car, which serves as their ma
 <p> By William Luzzatto on 9/22/2015, tight for life </p>
 <h2> <u> People in order of Tightness </u></h2>
 <ul> <li> Almir Listo </li>
+<li> Godd Howard</li>
+<li> Yung Lean </li>
 <li>Doctor Swifto </li>
 <li>BustANutOnTheCoach </li> </ul>
-<a href= "http://steamcommunity.com/id/DoctorSwifto"> Doctor Swifto </a>
+<a href= "http://steamcommunity.com/groups/TheTightestCrew"> The Official Tightest Crew Steam group </a>
  <h2> <u> The Gospel of Tight </u> </h2>
  
  <ol> <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
- <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> </ol>
+ <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> 
+  <li><a href= "A prayer.html"> Prayer to Almir </a></li> </ol>
 <p>
 
  <h2> <u> Unrelated Sites </u> </h2>
