--- a/A prayer.html
+++ b/A prayer.html
@@ -3,7 +3,7 @@
 <head>
 <h1><u> A Prayer</u> <title> A Prayer</title> </h1> </head>
 <body> 
-<h2> <u> In the beginning</u> </h2>
+<h2> <u> A Prayer</u> </h2>
 <p>  Our Almir
 who resides in steam wallets above
 tightest be thy name
