--- a/A prayer.html
+++ b/A prayer.html
@@ -7,15 +7,16 @@
 <p>  Our Almir
 who resides in steam wallets above
 tightest be thy name
-Our dlc come
+Our DLC come
 our money will be done
-On Earth in which dlc once was
-Give us this dlc our daily car 4 mod
+On Earth in which dlc once was</p>
+<p>Give us this dlc our daily car 4 mod
 and forgive those who are not as tight
-as we forgive those who try to untighten us
+as we forgive those who try to untighten us,
 deliver us from the realm of gaben below
-and lead us not into a black hole of lean
+and lead us not into a black hole of lean,
 but deliver us from the untight</p>
+<img src= "photos/tight.jpg"/>
 
 <p>In the name of Almir, Lean, and the tightest tight</p>
  <a href= "Tightest crew site.html"> Home </a> 
