--- a/yung lean.html
+++ b/yung lean.html
@@ -19,7 +19,8 @@ tried to be most Yung-Lean-like. Striving to reach the level at which Yung Lean'
  black hole. So much tightness in one spot caused a black hole. And it killed him and 20 other followers. Almir patched the hole with DLC, and if Almir did not stop making DLC, the black hole would open again.
  Moral of the story is that with great power comes great responsibility. And this is why Almir is always making DLC. </p>
   <a href= "Tightest crew site.html"> Home </a> 
-<ol><a href= "Almir.html"> Almir and the Creation of the Universe </a></ol>
+<ol><li><a href= "Almir.html"> Almir and the Creation of the Universe </a></li>
+ <li><a href= "A prayer.html"> Prayer to Almir </a></li></ol>
 
  </body>
  </html>
