--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -66,13 +66,14 @@ bullet right out of the air. They stole Ghaddafi's car, which serves as their ma
  <h2> <u> The Gospel of Tight </u> </h2>
  
  <ol> <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
+ <li> <a href= "godd.html"> Godd Howard and the Holy Child </a>
  <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> 
   <li><a href= "A prayer.html"> Prayer to Almir </a></li> </ol>
 <p>
 
- <h2> <u> Unrelated Sites </u> </h2>
-  <a href= "nam.html"> Back In Nam </a>
-    <a href= "nine.html"> I don't know why I made this</a> 
+ <h3> <u> Unrelated Sites That I made</u> </h3>
+  <ol> <li><a href= "nam.html"> Back In Nam </a></li>
+   <li> <a href= "nine.html"> I don't know why I made this</a> </li> </ol>
   </p>
 
 <img src= "photos/koala.jpg"/>
