--- a/A prayer.html
+++ b/A prayer.html
@@ -3,6 +3,7 @@
 <head>
 <h1><u> A Prayer</u> <title> A Prayer</title> </h1> </head>
 <body> 
+<link href = "css/style.css" type = "text/css" rel = "stylesheet" />
 <h2> <u> A Prayer</u> </h2>
 <p>  Our Almir
 who resides in steam wallets above
