--- a/Almir.html
+++ b/Almir.html
@@ -3,6 +3,7 @@
 <head>
 <h1><u> The Creation of the Universe </u> <title> The Creation of the Universe</title> </h1> </head>
 <body> 
+<link href = "css/style.css" type = "text/css" rel = "stylesheet" />
 <h2> <u> In the beginning</u> </h2>
 <p> In the beginning there was nothing, but Almir Listo. All was dark, no light to be seen. On the first day, Almir created light, dark and DLC. The good was light, dark was bad, and DLC was everywhere.</p>
 
