--- a/nam.html
+++ b/nam.html
@@ -2,6 +2,7 @@
 <html>
 <head> <title> Back in Nam </title> <h2> Back in Nam </h2> </head>
 <body>
+<link href = "css/style.css" type = "text/css" rel = "stylesheet" />
 <p> <h3> Back in 'nam I was seperated from my platoon during a rescue mission deep in the jungle. I picked off the local VC one by one, for 3 months. Living off my own urine and tiger meat. </h3> </p>
  <a href= "Tightest crew site.html"> Home </a> 
 </body>
