--- a/yung lean.html
+++ b/yung lean.html
@@ -3,6 +3,7 @@
 <head>
 <h1><u> The Story of Yung Lean </u> <title> The Story of Yung Lean </title> </h1> </head>
 <body> 
+<link href = "css/style.css" type = "text/css" rel = "stylesheet" />
 <h2> <u> Early life </u> </h2>
 <p> Yung lean is a sort of demigod. Born half human, half DLC. Yung lean is the son of Almir Listo. He was born to a virgin mother, much like jesus.
  Almir told Yung Lean's mother that she was having a holy child. It was immediately evident when Yung Lean was born, that he was he was destined to be one of the tightest men alive.
