--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -66,7 +66,7 @@ bullet right out of the air. They stole Ghaddafi's car, which serves as their ma
  <h2> <u> The Gospel of Tight </u> </h2>
  
  <ol> <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
- <li> <a href= "godd.html"> Godd Howard and the Holy Child </a>
+ <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
  <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> 
   <li><a href= "A prayer.html"> Prayer to Almir </a></li> </ol>
 <p>
