--- a/godd.html
+++ b/godd.html
@@ -2,12 +2,14 @@
 <html>
 <head> <title> The Story of Godd Howard </title> <h2> The Story of Godd Howard  </h2> </head>
 <body>
+<link href = "css/style.css" type = "text/css" rel = "stylesheet" />
 <p> Godd Howard was a poor sheperd in Bethesda, Maryland USA. He was inpregnated with Almir's child, "Yung Lean". Almir told Godd Howard that he is 
 pregnant with a holy child, and that he would be the tightest human to ever live. Almir told Godd Howard that he is to raise this child and that 
 Almir ain't payin' no child support. Despite never paying child support to his baby daddy/momma, Almir watched over the child and father.</p>
 <p> After a 2014 announcement, and a 2015 release. (Almir said that Yung will come out in 2014, but he came out in 2015.)
  Godd Howard went to Washington DC. All the hotels were full, as the special olypics was there, Godd Howard had to stay in a barn with chickens and 
- stuff. He had the baby in the hay. Not going to go into how, use your damn imagination. And the holy child was born. Almir had sent messages to 3 Wise Men, Will, Alex, and Ryan Gosling. They all brought gifts of DLC </p>
+ stuff. He had the baby in the hay. Not going to go into how, use your damn imagination. And the holy child was born. 
+ Almir had sent messages to 3 Wise Men, Will, Alex, and Ryan Gosling. They all brought gifts of DLC </p>
  <a href= "Tightest crew site.html"> Home </a> 
   <h2> <u> The Gospel of Tight </u> </h2>
  
