--- a/godd.html
+++ b/godd.html
@@ -9,7 +9,9 @@ Almir ain't payin' no child support. Despite never paying child support to his b
 <p> After a 2014 announcement, and a 2015 release. (Almir said that Yung will come out in 2014, but he came out in 2015.)
  Godd Howard went to Washington DC. All the hotels were full, as the special olypics was there, Godd Howard had to stay in a barn with chickens and 
  stuff. He had the baby in the hay. Not going to go into how, use your damn imagination. And the holy child was born. 
- Almir had sent messages to 3 Wise Men, Will, Alex, and Ryan Gosling. They all brought gifts of DLC </p>
+ Almir had sent messages to 3 Wise Men, Doctor Swifto, BustANutOnTheCoach , and Ryan Gosling. They all brought gifts of DLC. Oh, also money. 
+ They christened him a real human bean, and a real hero. From birth Yung Lean was a real human bean </p>
+
  <a href= "Tightest crew site.html"> Home </a> 
   <h2> <u> The Gospel of Tight </u> </h2>
  
