--- a/Almir.html
+++ b/Almir.html
@@ -14,7 +14,9 @@
 <p> On the seventh day he procreated with a human woman, creating Yung Lean. Yung Lean was a real human bean. Half man, half DLC.</p>
 <p> Almir protected mankind, making sure that there was always tightness to spare. He did not create DLC until Yung Lean passed away. But that's a story for another day. </p>
  <a href= "Tightest crew site.html"> Home </a> 
-<ol> <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li>
+<ol>
+ <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
+ <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li>
  <li><a href= "A prayer.html"> Prayer to Almir </a></li></ol>
 
 
