--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -56,12 +56,13 @@ bullet right out of the air. They stole Ghaddafi's car, which serves as their ma
  monastery in Havre De Grace, Maryland. The school of the tight is located there. The tight monastery was founded by the tightest man alive Doctor
  Swifto. But Almir is the tightest entity ever.</p>
 <p> By William Luzzatto on 9/22/2015, tight for life </p>
-<h2> <u> People in order of Tightness </u></h2>
+<h2> <u> People in the Order of Tightness </u></h2>
 <ul> <li> Almir Listo </li>
 <li> Godd Howard</li>
 <li> Yung Lean </li>
 <li>Doctor Swifto </li>
-<li>BustANutOnTheCoach </li> </ul>
+<li>BustANutOnTheCoach </li>
+<li>Ravenous Bear Cub </li> </ul>
 <a href= "http://steamcommunity.com/groups/TheTightestCrew"> The Official Tightest Crew Steam group </a>
  <h2> <u> The Gospel of Tight </u> </h2>
  
