--- a/yung lean.html
+++ b/yung lean.html
@@ -21,6 +21,7 @@ tried to be most Yung-Lean-like. Striving to reach the level at which Yung Lean'
  Moral of the story is that with great power comes great responsibility. And this is why Almir is always making DLC. </p>
   <a href= "Tightest crew site.html"> Home </a> 
 <ol><li><a href= "Almir.html"> Almir and the Creation of the Universe </a></li>
+ <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
  <li><a href= "A prayer.html"> Prayer to Almir </a></li></ol>
 
  </body>
