--- a/godd.html
+++ b/godd.html
@@ -11,6 +11,12 @@ Almir ain't payin' no child support. Despite never paying child support to his b
  stuff. He had the baby in the hay. Not going to go into how, use your damn imagination. And the holy child was born. 
  Almir had sent messages to 3 Wise Men, Doctor Swifto, BustANutOnTheCoach , and Ryan Gosling. They all brought gifts of DLC. Oh, also money. 
  They christened him a real human bean, and a real hero. From birth Yung Lean was a real human bean </p>
+ <p> From then on Godd Howard raised Yung Lean into a tight adult. </p>
+ <p> Godd Howard became a ceo of an amazing company, making great products. He became a multi-millionare.
+ He created universes of fantasy, much like Almir. He is a creator in a different type of way. 
+ While Almir created the earth, Godd Howard made the earth a desireable place to live. He is a prophet of 
+ Almirism, but he is not a diety. Godd Howard is as close to a diety man can become, the closest to godliness. 
+ He is the closes a pure human has been to godliness. Yung Lean is the closest a half human-half dlc man has gotten to godliness. </p>
 
  <a href= "Tightest crew site.html"> Home </a> 
   <h2> <u> The Gospel of Tight </u> </h2>
