--- a/A prayer.html
+++ b/A prayer.html
@@ -5,23 +5,26 @@
 <body> 
 <link href = "css/style.css" type = "text/css" rel = "stylesheet" />
 <h2> <u> A Prayer</u> </h2>
-<p>  Our Almir
-who resides in steam wallets above
-tightest be thy name
-Our DLC come
-our money will be done
-On Earth in which dlc once was</p>
-<p>Give us this dlc our daily car 4 mod
-and forgive those who are not as tight
-as we forgive those who try to untighten us,
-deliver us from the realm of gaben below
-and lead us not into a black hole of lean,
-but deliver us from the untight</p>
+<div class= "prayer">
+<p>  <ul><li>Our Almir</li>
+<li>who resides in steam wallets above</li>
+<li>tightest be thy name</li>
+<li>Our DLC come</li>
+<li>our money will be done</li>
+<li>On Earth in which dlc once was</li>
+<li>Give us this dlc our daily car 4 mod</li>
+<li>and forgive those who are not as tight</li>
+<li>as we forgive those who try to untighten us,</li>
+<li>deliver us from the realm of gaben below</li>
+<li>and lead us not into a black hole of lean,</li>
+<li>but deliver us from the untight</li>
+<li>In the name of Almir, Lean, and the tightest tight</li></p></ul>
+</div>
 <img src= "photos/tight.jpg"/>
 
-<p>In the name of Almir, Lean, and the tightest tight</p>
- <a href= "Tightest crew site.html"> Home </a> 
-  <ol><li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
+
+<ol><li> <a href= "Tightest crew site.html"> Home </a> </li>
+  <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
    <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
 <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DLC </a></li></ol>
 
