--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-<h1> <u> The Tightest Crew </u><title> Tightest Crew Site </title></h1>
+<div class="border1"><h1> <u> The Tightest Crew </u><title> Tightest Crew Site </title></h1></div>
 </head>
 <body>
 	<link href = "css/style.css" type = "text/css" rel = "stylesheet" />
-<h2><u> Who are we? </u></h2>
+<div class = "bordera"><h2><u> Who are we? </u></h2>
 <p> We are the tightest crew ever. Nobody has anything on us. We are the tightest in the world. Nobody is tighter than the tightest crew.
 We are the original tightest crew. Been tight since my first night, of my life. You could never even dream of being this tight. The amount of 
 tightness may seem impossible to the regular human brain. Our tightness is a paradox, wrapped in a riddle tightly, and enshrouded tightly in an enigma.
 Yung Lean is a real human bean, so is Ye Olde, but Ryan Gosling is the original human bean. Ryan Gosling is a real human bean and a real hero.
  We are the only humans who have reached this level of tightness. We were born to be tight, trained from infancy by 
 tibetan monks the art of the tightest crew. Taken away from our parents at birth and taught the way of the tight.
-One does not become a tightest crew, you are either born into it, or become one of the crew by proving yourself to the elder Tightmasters.
+One does not become a tightest crew, you are either born into it, or become one of the crew by proving yourself to the elder Tightmasters.</div>
 
 </p>
-<h2><strong><u> The Code of the Tightest Crew </u></strong></h2> <p><strong>"Tighthood is Knighthood. Tight for life. Never forgetti. Tightness brings 
+<div class="border2"><h2><strong><u> The Code of the Tightest Crew </u></strong></h2> <p><strong>"Tighthood is Knighthood. Tight for life. Never forgetti. Tightness brings 
 brightness. Tight for life. Never forgetti. Knees weak arms are heavy. On the surface he looks nervous but he's calm and ready. There's vomit on his 
-sweater already. Mom's spaghetti. </strong></p>
-<h2> <strong><u> Becoming one of the Tightest Crew </u></strong></h2> 
+sweater already. Mom's spaghetti. </strong></p></div>
+<div class = "border3"><h2> <strong><u> Becoming one of the Tightest Crew </u></strong></h2> 
 <p>One does not become a tightest crew easily, you must prove your courage, bravery and prowess in battle to one of the senior "Tightmasters".
  We were born to be tight, trained from infancy by tibetan monks the art of the tightest crew. Taken away from our parents at birth and taught the
  way of the tight.
 One does not become a tightest crew, you are either born into it, or become one of the crew by proving yourself to the elder Tightmasters. You are 
 either born into the tight by a Tight father and tight mother who love each other and make a tight baby a tight bed in . Or you prove your worth 
 to the
-order of the tight.</P>
-<h2> <strong><u> Features of crew members</u> </strong> </h2> 
+order of the tight.</P></div>
+<div class="border4"><h2> <strong><u> Features of crew members</u> </strong> </h2> 
 <p> Senior tightmasters develop the ability to time travel, make any voice and impersonate others, be invisible and super 
 stealthy, to heal wounds by yelling "Pain is just mental, get up and fight" at the wounded or to yell "We need you buddy, get up!", and last but not 
 least to be super strong and able to wear full body armor and move around with ease. 
@@ -39,7 +39,7 @@ they are together. If they are all wearing matching avaitor shades, they recieve
  multiplied by 10000 for each crew member. Each crew member would have the total tight level multiplied by 1000 for themselves while wearing m
  atching avaitors. Doctor Swifto may be the most senior tightmaster, but Almir Listo is 10000000000 times tighter than him. That makes Almir 
  10000000000  times tighter than the tightest person from the tightest crew in the universe.
-</p>
+</p></div>
 
 <img src= "photos/tight.jpg"/>
 <p> Tightmasters are amazing drivers, serving as escape drivers and real human beans. After hours on end of radiation exposure from radiating 
