--- a/A prayer.html
+++ b/A prayer.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-<h1><u> A Prayer</u> <title> A Prayer</title> </h1> </head>
-<body> 
-<link href = "css/style.css" type = "text/css" rel = "stylesheet" />
-<h2> <u> A Prayer</u> </h2>
-<div class= "prayer">
-<p>  <ul><li>Our Almir</li>
-<li>who resides in steam wallets above</li>
-<li>tightest be thy name</li>
-<li>Our DLC come</li>
-<li>our money will be done</li>
-<li>On Earth in which dlc once was</li>
-<li>Give us this dlc our daily car 4 mod</li>
-<li>and forgive those who are not as tight</li>
-<li>as we forgive those who try to untighten us,</li>
-<li>deliver us from the realm of gaben below</li>
-<li>and lead us not into a black hole of lean,</li>
-<li>but deliver us from the untight</li>
-<li>In the name of Almir, Lean, and the tightest tight</li></p></ul>
-</div>
-<img src= "photos/tight.jpg"/>
-
-
-<ol><li> <a href= "Tightest crew site.html"> Home </a> </li>
+<div class= "linksprayer"><ol><li> <a href= "Tightest crew site.html"> Home </a> </li>
   <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
    <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
-<li><a href= "yung lean.html"> Yung Lean and the story of Almir's DLC </a></li></ol>
+<li><a href= "yung lean.html"> Yung Lean and the story of Almir's DLC </a></li></ol></div>
+<div class= "borderprayer"><h1><u> A Prayer</u> <title> A Prayer</title> </h1> </head></div>
+<body> 
+<link href = "css/style.css" type = "text/css" rel = "stylesheet" />
+<div class= "prayer">
+<p>  <strong>O</strong>ur Almir,
+<strong>W</strong>ho resides in steam wallets above,
+<strong>T</strong>ightest be thy name,
+<strong>O</strong>ur DLC come,
+<strong>O</strong>ur money will be done,
+<strong>O</strong>n Earth in which dlc once was,
+<strong>G</strong>ive us this dlc our daily car 4 mod,
+<strong>A</strong>nd forgive those who are not as tight,
+<strong>A</strong>s we forgive those who try to untighten us,
+<strong>D</strong>eliver us from the realm of gaben below,
+<strong>A</strong>nd lead us not into a black hole of lean,
+<strong>B</strong>ut deliver us from the untight,
+<strong>I</strong>n the name of Almir, Lean, and the tightest tight</p>
+<img src= "photos/almir listo.jpg"/></div>
+<div class= "tightaf"><img src= "photos/tight.jpg"/></div>
+<p> After this prayer is said by the Rabi of the local tight synagogue, mass may begin. This prayer is followed by the reading of a passage from the Gospel of Tight, followed by prayer or church hymn.</p>
+
+
 
 
 </body>
