--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -5,6 +5,17 @@
 </head>
 <body>
 	<link href = "css/style.css" type = "text/css" rel = "stylesheet" />
+	<div class ="links"><h2> <u> The Gospel of Tight </u> </h2>
+<ol> <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
+ <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
+ <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> 
+  <li><a href= "A prayer.html"> Prayer to Almir </a></li> </ol>
+<p> 
+
+ <h3> <u> Unrelated Sites That I made</u> </h3>
+  <ol> <li><a href= "nam.html"> Back In Nam </a></li>
+   <li> <a href= "nine.html"> I don't know why I made this</a> </li> </ol>
+  </p></div>
 <div class = "bordera"><h2><u> Who are we? </u></h2>
 <p> We are the tightest crew ever. Nobody has anything on us. We are the tightest in the world. Nobody is tighter than the tightest crew.
 We are the original tightest crew. Been tight since my first night, of my life. You could never even dream of being this tight. The amount of 
@@ -42,19 +53,19 @@ they are together. If they are all wearing matching avaitor shades, they recieve
 </p></div>
 
 <img src= "photos/tight.jpg"/>
-<p> Tightmasters are amazing drivers, serving as escape drivers and real human beans. After hours on end of radiation exposure from radiating 
+<div class="border4"><p> Tightmasters are amazing drivers, serving as escape drivers and real human beans. After hours on end of radiation exposure from radiating 
 tightness, and sometimes carrying nuclear bombs around casually with their inhuman strength, tightmasters almost have superpowers. Such as mentioned 
 before, with yelling at people to heal wounds. They are amazing drivers, and can drive even when their eyes are completely covered. They can 
 drift and are masters of driving 2fast2qwik. The tight usually travel in groups of 4, as that is all they need.
 They are both masters of stealth and secrecy, and masters of fighting 
  "loud". They wield any weapon with ease. And they can hit a target 15 lightyears away. </p>
 <p>They are masters of finesse, stealing from the rich and giving to themselves. They are so finesse that if they are shot at they can finesse the 
-bullet right out of the air. They stole Ghaddafi's car, which serves as their main vehicle.<p>
-<h2> <u> To join the tight masters </u></h2>
+bullet right out of the air. They stole Ghaddafi's car, which serves as their main vehicle.<p></div>
+<div class= "border5"><h2> <u> To join the tight masters </u></h2>
 <p> To become one of the tight, one must develop tightness that is inhuman, so tight in fact that regular humans would die from the tight.
  You must train among the tight, day and night until you reach that level of tightness. It could take months of years of training in the tight 
  monastery in Havre De Grace, Maryland. The school of the tight is located there. The tight monastery was founded by the tightest man alive Doctor
- Swifto. But Almir is the tightest entity ever.</p>
+ Swifto. But Almir is the tightest entity ever.</p></div>
 <p> By William Luzzatto on 9/22/2015, tight for life </p>
 <h2> <u> People in the Order of Tightness </u></h2>
 <ul> <li> Almir Listo </li>
@@ -63,19 +74,7 @@ bullet right out of the air. They stole Ghaddafi's car, which serves as their ma
 <li>Doctor Swifto </li>
 <li>BustANutOnTheCoach </li>
 <li>Ravenous Bear Cub </li> </ul>
-<a href= "http://steamcommunity.com/groups/TheTightestCrew"> The Official Tightest Crew Steam group </a>
- <h2> <u> The Gospel of Tight </u> </h2>
- 
- <ol> <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
- <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
- <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> 
-  <li><a href= "A prayer.html"> Prayer to Almir </a></li> </ol>
-<p>
 
- <h3> <u> Unrelated Sites That I made</u> </h3>
-  <ol> <li><a href= "nam.html"> Back In Nam </a></li>
-   <li> <a href= "nine.html"> I don't know why I made this</a> </li> </ol>
-  </p>
 
 <img src= "photos/koala.jpg"/>
 <img src= "photos/sea.jpg"/>
