--- a/A prayer.html
+++ b/A prayer.html
@@ -4,7 +4,8 @@
 <div class= "linksprayer"><ol><li> <a href= "Tightest crew site.html"> Home </a> </li>
   <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
    <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
-<li><a href= "yung lean.html"> Yung Lean and the story of Almir's DLC </a></li></ol></div>
+<li><a href= "yung lean.html"> Yung Lean and the story of Almir's DLC </a></li>
+<li><a href="crimefest.html"> Crimefest; A holiday of Almir</a></li>
 <div class= "borderprayer"><h1><u> A Prayer</u> <title> A Prayer</title> </h1> </head></div>
 <body> 
 <link href = "css/style.css" type = "text/css" rel = "stylesheet" />
@@ -24,7 +25,9 @@
 <strong>I</strong>n the name of Almir, Lean, and the tightest tight</p>
 <img src= "photos/almir listo.jpg"/></div>
 <div class= "tightaf"><img src= "photos/tight.jpg"/></div>
-<p> After this prayer is said by the Rabi of the local tight synagogue, mass may begin. This prayer is followed by the reading of a passage from the Gospel of Tight, followed by prayer or church hymn.</p>
+<div class= "info"><p> After this prayer is said by the Rabi of the local tight synagogue, mass may begin. This prayer is followed by the reading of a passage from the Gospel of Tight, followed by prayer or church hymn.
+The mass is typically about an hour long. After the hymn, their are prayers. The seats in the synagogue are typically very tight as so to keep the worshipers in tight proximity. This way, they remain as tight as possible.
+The church consists of a Rabi and his helpers. The sessions happen every Sunday and Saturday. As these are the days of the lord. At the end of the service, worshipers donate DLC money to the Church of Almir.</p></div>
 
 
 
