--- a/Tightest crew site.html
+++ b/Tightest crew site.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<div class="border1"><h1> <u> The Tightest Crew </u><title> Tightest Crew Site </title></h1></div>
+<div class="border1main"><h1> <u> The Tightest Crew </u><title> Tightest Crew Site </title></h1></div>
 </head>
 <body>
 	<link href = "css/style.css" type = "text/css" rel = "stylesheet" />
-	<div class ="links"><h2> <u> The Gospel of Tight </u> </h2>
+	<div class ="linksmain"><h2> <u> The Gospel of Tight </u> </h2>
 <ol> <li>  <a href= "Almir.html"> Almir and the Creation of the Universe </a> </li>
  <li> <a href= "godd.html"> Godd Howard and the Holy Child </a></li>
  <li><a href= "yung lean.html"> Yung Lean and the story of Almir's DlC </a></li> 
@@ -27,7 +27,7 @@ tibetan monks the art of the tightest crew. Taken away from our parents at birth
 One does not become a tightest crew, you are either born into it, or become one of the crew by proving yourself to the elder Tightmasters.</div>
 
 </p>
-<div class="border2"><h2><strong><u> The Code of the Tightest Crew </u></strong></h2> <p><strong>"Tighthood is Knighthood. Tight for life. Never forgetti. Tightness brings 
+<div class="border2main"><h2><strong><u> The Code of the Tightest Crew </u></strong></h2> <p><strong>"Tighthood is Knighthood. Tight for life. Never forgetti. Tightness brings 
 brightness. Tight for life. Never forgetti. Knees weak arms are heavy. On the surface he looks nervous but he's calm and ready. There's vomit on his 
 sweater already. Mom's spaghetti. </strong></p></div>
 <div class = "border3"><h2> <strong><u> Becoming one of the Tightest Crew </u></strong></h2> 
@@ -38,7 +38,7 @@ One does not become a tightest crew, you are either born into it, or become one 
 either born into the tight by a Tight father and tight mother who love each other and make a tight baby a tight bed in . Or you prove your worth 
 to the
 order of the tight.</P></div>
-<div class="border4"><h2> <strong><u> Features of crew members</u> </strong> </h2> 
+<div class="border4main"><h2> <strong><u> Features of crew members</u> </strong> </h2> 
 <p> Senior tightmasters develop the ability to time travel, make any voice and impersonate others, be invisible and super 
 stealthy, to heal wounds by yelling "Pain is just mental, get up and fight" at the wounded or to yell "We need you buddy, get up!", and last but not 
 least to be super strong and able to wear full body armor and move around with ease. 
@@ -62,7 +62,7 @@ They are both masters of stealth and secrecy, and masters of fighting
  "loud". They wield any weapon with ease. And they can hit a target 15 lightyears away. </p>
 <p>They are masters of finesse, stealing from the rich and giving to themselves. They are so finesse that if they are shot at they can finesse the 
 bullet right out of the air. They stole Ghaddafi's car, which serves as their main vehicle.<p></div>
-<div class= "border5"><h2> <u> To join the tight masters </u></h2>
+<div class= "border5main"><h2> <u> To join the tight masters </u></h2>
 <p> To become one of the tight, one must develop tightness that is inhuman, so tight in fact that regular humans would die from the tight.
  You must train among the tight, day and night until you reach that level of tightness. It could take months of years of training in the tight 
  monastery in Havre De Grace, Maryland. The school of the tight is located there. The tight monastery was founded by the tightest man alive Doctor
